--- a/app/globals.css
+++ b/app/globals.css
@@ -361,7 +361,7 @@
 
     /* Sidebar */
     .sidebar {
-        @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-200 bg-white pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
+        @apply sticky left-0 top-0 flex h-screen w-fit flex-col justify-between border-r border-gray-200 bg-white pt-8 text-white max-md:hidden sm:p-4 2xl:w-[355px];
     }
 
     .sidebar-logo {
@@ -369,10 +369,10 @@
     }
 
     .sidebar-link {
-        @apply flex gap-3 items-center py-1 md:p-3 2xl:p-4 rounded-lg justify-center xl:justify-start;
+        @apply flex gap-3 items-center p-3 rounded-lg justify-center xl:justify-start;
     }
 
     .sidebar-label {
-        @apply text-16 font-semibold text-black-2 max-xl:hidden;
+        @apply w-full text-16 p-0 font-semibold text-black-2 max-xl:hidden;
     }
 }
